tests/setup.ts
// Jest setup file

// Add custom matchers if needed
// extend expect with custom matchers
// Example: expect.extend({...})

// Mock console methods if needed
// global.console = {
//   ...console,
//   // Uncomment to silence specific console methods during tests
//   // log: jest.fn(),
//   // error: jest.fn(),
//   // warn: jest.fn(),
//   // info: jest.fn(),
// };
